--- a/epic.crm.frontend/src/app/app.component.html
+++ b/epic.crm.frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-menu></app-nav-menu>
-<div>
+<div class="mb-3 content">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
