--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
@@ -1,1 +1,18 @@
-<p>nav-menu works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse collapse" id="navbarNavAltMarkup">
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/users">Users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/works">Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/customers">Customers</a>
+      </li>
+    </ul>
+  </div>
+</nav>
