nyelvesites,solution solution atnevezes es project refek javitasa

--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
@@ -14,5 +14,6 @@
         <a class="nav-link" routerLink="/customers">Customers</a>
       </li>
     </ul>
+    <app-language-selector class="me-4"></app-language-selector>
   </div>
 </nav>
