--- a/epic.crm.frontend/src/app/login/login.component.html
+++ b/epic.crm.frontend/src/app/login/login.component.html
@@ -1,21 +1,21 @@
 <mat-card>
-  <mat-card-title>Login</mat-card-title>
+  <mat-card-title>{{'login.login' | translate}}</mat-card-title>
   <mat-card-content>
     <form [formGroup]="formGroup" (ngSubmit)="submit()">
       <p>
         <mat-form-field appearance="outline">
-          <mat-label>Username</mat-label>
+          <mat-label>{{'login.username' | translate}}</mat-label>
           <input type="text" matInput formControlName="username">
         </mat-form-field>
       </p>
       <p>
         <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>{{'login.password' | translate}}</mat-label>
           <input type="password" matInput formControlName="password">
         </mat-form-field>
       </p>
       <div class="button">
-        <button type="submit" color="primary" [disabled]="formGroup.invalid" mat-raised-button>Login</button>
+        <button type="submit" color="primary" [disabled]="formGroup.invalid" mat-raised-button>{{'login.login' | translate}}</button>
       </div>
     </form>
   </mat-card-content>
