--- a/epic.crm.frontend/src/app/work/work.component.html
+++ b/epic.crm.frontend/src/app/work/work.component.html
@@ -1,1 +1,53 @@
-<p>work works!</p>
+<h1>{{'work.title' | translate}}</h1>
+<div>
+  <button class="mb-1" (click)="add()" color="primary" mat-raised-button>{{'common.add' | translate}}</button>
+  <button class="ms-2 mb-1" (click)="edit()" color="accent" mat-raised-button>{{'common.edit' | translate}}</button>
+  <button class="ms-2 mb-1" (click)="delete()" color="warn" mat-raised-button>{{'common.delete' | translate}}</button>
+</div>
+<div class="mt-2">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="WorkId">
+      <th mat-header-cell *matHeaderCellDef>{{'work.workId' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.WorkId}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="WorkDateTime">
+      <th mat-header-cell *matHeaderCellDef>{{'work.workDateTime' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.WorkDateTime}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>{{'work.name' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="CustomerName">
+      <th mat-header-cell *matHeaderCellDef>{{'work.customerName' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.CustomerName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Description">
+      <th mat-header-cell *matHeaderCellDef>{{'work.description' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="AddressLiteral">
+      <th mat-header-cell *matHeaderCellDef>{{'work.addressLiteral' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.AddressLiteral}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="WorkStatus">
+      <th mat-header-cell *matHeaderCellDef>{{'work.workStatus' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.WorkStatus}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Price">
+      <th mat-header-cell *matHeaderCellDef>{{'work.price' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.Price}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></tr>
+  </table>
+</div>
+
