--- a/epic.crm.frontend/src/app/user/user.component.html
+++ b/epic.crm.frontend/src/app/user/user.component.html
@@ -7,32 +7,32 @@
 <div class="mt-2">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="AppUserId">
-      <th mat-header-cell *matHeaderCellDef>{{'user.AppUserId' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.appUserId' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.AppUserId}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef>{{'user.Name' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.name' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef>{{'user.Email' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.email' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.Email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Profession">
-      <th mat-header-cell *matHeaderCellDef>{{'user.Profession' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.profession' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.Profession}} </td>
     </ng-container>
 
     <ng-container matColumnDef="WorkCount">
-      <th mat-header-cell *matHeaderCellDef>{{'user.WorkCount' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.workCount' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.WorkCount}} </td>
     </ng-container>
 
     <ng-container matColumnDef="CustomerCount">
-      <th mat-header-cell *matHeaderCellDef>{{'user.CustomerCount' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef>{{'user.customerCount' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.CustomerCount}} </td>
     </ng-container>
 
