--- a/epic.crm.frontend/src/app/customers/customers.component.html
+++ b/epic.crm.frontend/src/app/customers/customers.component.html
@@ -1,27 +1,51 @@
 <h1>{{'customer.title' | translate}}</h1>
 <div>
   <button class="mb-1" (click)="add()" color="primary" mat-raised-button>{{'common.add' | translate}}</button>
-  <button class="ms-2 mb-1" (click)="edit()" color="accent" mat-raised-button>{{'common.edit' | translate}}</button>
-  <button class="ms-2 mb-1" (click)="delete()" color="warn" mat-raised-button>{{'common.delete' | translate}}</button>
+  <button class="ms-2 mb-1" (click)="edit()" [disabled]="!selectedDataRow" color="accent" mat-raised-button>{{'common.edit' | translate}}</button>
+  <button class="ms-2 mb-1" (click)="delete()" [disabled]="!selectedDataRow" color="warn" mat-raised-button>{{'common.delete' | translate}}</button>
 </div>
+
+<div class="mb-3">
+  <mat-expansion-panel class="mat-elevation-z5 mb-3" [expanded]="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title class="noselect">{{ 'common.search' | translate}}</mat-panel-title>
+    </mat-expansion-panel-header>
+    <div>
+      <mat-form-field>
+        <mat-label>{{ 'common.search' | translate }}</mat-label>
+        <input matInput [(ngModel)]="filter.searchString">
+      </mat-form-field>
+
+      <button class="ms-3" mat-raised-button color="primary" (click)="onSearch()">
+        {{ 'common.search' | translate }}
+      </button>
+    </div>
+  </mat-expansion-panel>
+</div>
+
 <div class="mt-2">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="Name">
       <th mat-header-cell *matHeaderCellDef>{{'customer.name' | translate}}</th>
-      <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Email">
       <th mat-header-cell *matHeaderCellDef>{{'customer.email' | translate}}</th>
-      <td mat-cell *matCellDef="let element"> {{element.Email}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="AddressLiteral">
       <th mat-header-cell *matHeaderCellDef>{{'customer.addressLiteral' | translate}}</th>
-      <td mat-cell *matCellDef="let element"> {{element.AddressLiteral}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.addressLiteral}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        [class.selected-table-row]="selectedDataRow?.customerId == row.customerId"
+        (click)="selectRow(row)"></tr>
   </table>
+  <br />
+  <mat-paginator [hidden]="!dataSource || dataSource.data.length === 0" (page)="getData(false)" [pageSize]="25" [pageIndex]="0"
+                 [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons></mat-paginator>
 </div>
