--- a/epic.crm.frontend/src/app/user/modify-user-dialog/modify-dialog.component.html
+++ b/epic.crm.frontend/src/app/user/modify-user-dialog/modify-dialog.component.html
@@ -12,6 +12,16 @@
       </mat-form-field>
     </div>
 
+    <div class="mb-2" *ngIf="!selectedRow">
+      <mat-form-field>
+        <mat-label>{{ 'user.password' | translate }}</mat-label>
+        <input matInput formControlName="password" required type="password">
+        <mat-error class="smaller-text" *ngIf="formGroup.controls['password'].hasError('required')">
+          <span [innerHTML]="'validation.required' | translate"></span>
+        </mat-error>
+      </mat-form-field>
+    </div>
+
     <div class="mb-2">
       <mat-form-field>
         <mat-label>{{ 'user.email' | translate }}</mat-label>
