--- a/epic.crm.frontend/src/styles.scss
+++ b/epic.crm.frontend/src/styles.scss
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.selected-table-row {
+  background: #D3D3D3 !important;
+}
+
+
