--- a/epic.crm.frontend/src/app/customers/customers.component.html
+++ b/epic.crm.frontend/src/app/customers/customers.component.html
@@ -24,14 +24,15 @@
 </div>
 
 <div class="mt-2">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
+         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
     <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef>{{'customer.name' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'customer.name' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef>{{'customer.email' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'customer.email' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
