--- a/epic.crm.frontend/src/app/user/user.component.html
+++ b/epic.crm.frontend/src/app/user/user.component.html
@@ -24,24 +24,25 @@
 </div>
 
 <div class="mt-2">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="AppUserId">
-      <th mat-header-cell *matHeaderCellDef>{{'user.appUserId' | translate}}</th>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
+         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.appUserId' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.appUserId}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef>{{'user.name' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.name' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef>{{'user.email' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.email' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Profession">
-      <th mat-header-cell *matHeaderCellDef>{{'user.profession' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.profession' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.profession}} </td>
     </ng-container>
 
@@ -56,7 +57,7 @@
     </ng-container>
 
     <ng-container matColumnDef="IsAdmin">
-      <th mat-header-cell *matHeaderCellDef>{{'user.isAdmin' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.isAdmin' | translate}}</th>
       <td mat-cell *matCellDef="let element">
         <mat-checkbox [(ngModel)]="element.isAdmin" [disabled]="true"></mat-checkbox>
       </td>
