--- a/epic.crm.frontend/src/app/work/work.component.html
+++ b/epic.crm.frontend/src/app/work/work.component.html
@@ -24,44 +24,45 @@
 </div>
 
 <div class="mt-2">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
+         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
     <ng-container matColumnDef="WorkId">
-      <th mat-header-cell *matHeaderCellDef>{{'work.workId' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.workId' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.workId}} </td>
     </ng-container>
 
     <ng-container matColumnDef="WorkDateTime">
-      <th mat-header-cell *matHeaderCellDef>{{'work.workDateTime' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.workDateTime' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.workDateTime | date:'yyyy-MM-dd HH:mm:ss'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef>{{'work.name' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.name' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="CustomerName">
-      <th mat-header-cell *matHeaderCellDef>{{'work.customerName' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.customerName' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Description">
-      <th mat-header-cell *matHeaderCellDef>{{'work.description' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.description' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container>
 
     <ng-container matColumnDef="AddressLiteral">
-      <th mat-header-cell *matHeaderCellDef>{{'work.addressLiteral' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.addressLiteral' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.addressLiteral}} </td>
     </ng-container>
 
     <ng-container matColumnDef="WorkStatus">
-      <th mat-header-cell *matHeaderCellDef>{{'work.workStatus' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.workStatus' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{'workStatusEnum.' + element.workStatusId | translate}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Price">
-      <th mat-header-cell *matHeaderCellDef>{{'work.price' | translate}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.price' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.price}} </td>
     </ng-container>
 
