--- a/epic.crm.frontend/src/app/common/components/language-selector/language-selector.component.html
+++ b/epic.crm.frontend/src/app/common/components/language-selector/language-selector.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button [mat-menu-trigger-for]="themeMenu">
+<button mat-icon-button [mat-menu-trigger-for]="themeMenu" class="language-icon">
   <img *ngIf="selectedLanguage === 'hu'" class="language-image" src="assets/flags/hu.svg">
   <img *ngIf="selectedLanguage === 'en'" class="language-image" src="assets/flags/en.svg">
 </button>
