--- a/epic.crm.frontend/src/app/login/login.component.scss
+++ b/epic.crm.frontend/src/app/login/login.component.scss
@@ -18,3 +18,8 @@ mat-card-content {
   display: flex;
   justify-content: center;
 }
+
+.logged-in-content{
+    width:80% !important;
+    height:80% !important;
+}
