--- a/epic.crm.frontend/src/app/login/login.component.html
+++ b/epic.crm.frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card *ngIf="!loginUser">
   <mat-card-title>{{'login.login' | translate}}</mat-card-title>
   <mat-card-content>
     <form [formGroup]="formGroup" (ngSubmit)="submit()">
@@ -20,3 +20,6 @@
     </form>
   </mat-card-content>
 </mat-card>
+<h2 *ngIf="loginUser">
+  {{'common.loggedIn' | translate}}
+</h2>
