--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
@@ -4,16 +4,23 @@
   </button>
   <div class="navbar-collapse collapse" id="navbarNavAltMarkup">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loginUser && loginUser.isAdmin">
         <a class="nav-link" routerLink="/users">Users</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loginUser">
         <a class="nav-link" routerLink="/works">Works</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loginUser">
         <a class="nav-link" routerLink="/customers">Customers</a>
       </li>
+
+      <li class="nav-item" *ngIf="loginUser">
+        <a class="nav-link" (click)="logout()">{{'common.logout' | translate}}</a>
+      </li>
+
+      <li class="nav-item">
+        <app-language-selector class="ms-auto mb-2 mb-lg-0 me-4"></app-language-selector>
+      </li>
     </ul>
-    <app-language-selector class="me-4"></app-language-selector>
   </div>
 </nav>
