--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.scss
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.scss
@@ -2,4 +2,8 @@
   margin-left: 10px !important;
   cursor:pointer !important;
 }
+.loggedInUser {
+  margin-left: 10px !important;
+  cursor: text !important;
+}
 
