--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
@@ -1,21 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <span class="ms-2 navbar-brand">EPIC CRM</span>
   <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="navbar-collapse collapse" id="navbarNavAltMarkup">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
       <li class="nav-item" *ngIf="loginUser && loginUser.isAdmin">
-        <a class="nav-link" routerLink="/users">Users</a>
+        <a class="nav-link" routerLink="/users">{{'menu.users' | translate}}</a>
       </li>
       <li class="nav-item" *ngIf="loginUser">
-        <a class="nav-link" routerLink="/works">Works</a>
+        <a class="nav-link" routerLink="/works">{{'menu.works' | translate}}</a>
       </li>
       <li class="nav-item" *ngIf="loginUser">
-        <a class="nav-link" routerLink="/customers">Customers</a>
+        <a class="nav-link" routerLink="/customers">{{'menu.customers' | translate}}</a>
       </li>
 
       <li class="nav-item" *ngIf="loginUser">
-        <a class="nav-link" (click)="logout()">{{'common.logout' | translate}}</a>
+        <a class="nav-link" (click)="logout()">{{'common.logout' | translate}} ({{loginUser.name}})</a>
       </li>
 
       <li class="nav-item">
