--- a/epic.crm.frontend/src/app/work/add-address-dialog/add-address-dialog.component.html
+++ b/epic.crm.frontend/src/app/work/add-address-dialog/add-address-dialog.component.html
@@ -1,27 +1,6 @@
-<h1 mat-dialog-title *ngIf="!selectedRow">{{ 'common.add' | translate }}</h1>
-<h1 mat-dialog-title *ngIf="selectedRow">{{ 'common.edit' | translate }}</h1>
+<h1 mat-dialog-title>{{ 'common.add' | translate }}</h1>
 <mat-dialog-content>
-  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" class="form">
-    <div class="mb-2">
-      <mat-form-field>
-        <mat-label>{{ 'customer.name' | translate }}</mat-label>
-        <input matInput formControlName="name" required type="text" maxlength="250">
-        <mat-error class="smaller-text" *ngIf="formGroup.controls['name'].hasError('required')">
-          <span [innerHTML]="'validation.required' | translate"></span>
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="mb-2">
-      <mat-form-field>
-        <mat-label>{{ 'customer.email' | translate }}</mat-label>
-        <input matInput formControlName="email" required type="email" maxlength="250">
-        <mat-error class="smaller-text" *ngIf="formGroup.controls['email'].hasError('required')">
-          <span [innerHTML]="'validation.required' | translate"></span>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <strong>{{'customer.addressInformation' | translate }}</strong>
+  <form [formGroup]="formGroup" class="form">
     <div class="mb-2">
       <mat-form-field>
         <mat-label>{{ 'customer.zip' | translate }}</mat-label>
@@ -54,8 +33,8 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions class="mt-3" align="end">
-  <button mat-raised-button color="primary" [disabled]="formGroup.invalid || formGroup.pristine" (click)="onSubmit()">
+  <button mat-raised-button color="primary" [disabled]="formGroup.invalid || formGroup.pristine" (click)="onSaveAddress()">
     {{ 'common.save' | translate }}
   </button>
-  <button class="mr-1" mat-raised-button mat-dialog-close>{{ 'common.cancel' | translate }}</button>
+  <button class="mr-1" mat-raised-button [mat-dialog-close]="false">{{ 'common.cancel' | translate }}</button>
 </mat-dialog-actions>
