--- a/epic.crm.frontend/src/styles.scss
+++ b/epic.crm.frontend/src/styles.scss
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@import '@angular/material/theming';
+@include mat-core();
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -9,3 +12,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 
+ 
+$my-app-primary: mat-palette($mat-indigo);
+$my-app-accent: mat-palette($mat-pink, A200, A100, A400);
+/*$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent);*/
+
+$my-app-theme: mat-light-theme(( color: ( primary: $my-app-primary, accent: $my-app-accent, ), typography: mat.define-typography-config(), density: 0, ));
+
+
+@include angular-material-theme($my-app-theme);
