--- a/epic.crm.frontend/src/app/customers/customers.component.html
+++ b/epic.crm.frontend/src/app/customers/customers.component.html
@@ -25,7 +25,12 @@
 
 <div class="mt-2">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
-         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
+         (matSortChange)="onChangeSort()" matSortActive="customerId" matSortDirection="desc" matSortDisableClear>
+    <ng-container matColumnDef="customerId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'customer.customerId' | translate}}</th>
+      <td mat-cell *matCellDef="let element"> {{element.customerId}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="Name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'customer.name' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
