--- a/epic.crm.frontend/src/app/user/user.component.html
+++ b/epic.crm.frontend/src/app/user/user.component.html
@@ -25,7 +25,7 @@
 
 <div class="mt-2">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
-         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
+         (matSortChange)="onChangeSort()" matSortActive="appUserId" matSortDirection="desc" matSortDisableClear>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user.appUserId' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.appUserId}} </td>
