--- a/epic.crm.frontend/src/app/work/work.component.html
+++ b/epic.crm.frontend/src/app/work/work.component.html
@@ -25,7 +25,7 @@
 
 <div class="mt-2">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort
-         (matSortChange)="onChangeSort()" matSortActive="Name" matSortDirection="asc" matSortDisableClear>
+         (matSortChange)="onChangeSort()" matSortActive="workId" matSortDirection="desc" matSortDisableClear>
     <ng-container matColumnDef="WorkId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'work.workId' | translate}}</th>
       <td mat-cell *matCellDef="let element"> {{element.workId}} </td>
