--- a/epic.crm.frontend/src/app/user/user.component.html
+++ b/epic.crm.frontend/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<h1>{{'user.title' | translate}}</h1>
+<h1 class="mt-4 mb-1">{{'user.title' | translate}}</h1>
 <div>
   <button class="mb-3" (click)="add()" color="primary" mat-raised-button>{{'common.add' | translate}}</button>
   <button class="ms-2 mb-3" (click)="edit()" [disabled]="!selectedDataRow" color="accent" mat-raised-button>{{'common.edit' | translate}}</button>
