--- a/epic.crm.frontend/src/styles.scss
+++ b/epic.crm.frontend/src/styles.scss
@@ -1,6 +1,7 @@
 @use '@angular/material' as mat;
 @import '@angular/material/theming';
 @include mat-core();
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 
 html, body { height: 100%; }
