--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <span class="ms-2 navbar-brand">EPIC CRM</span>
+  <span class="ms-2 navbar-brand">
+    <img src="../../assets/epic_crm_logo.png" class="logo" />
+  </span>
   <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,8 +13,8 @@
       </li>
 
       <li class="nav-item dropdown" *ngIf="loginUser">
-        <a class="nav-link dropdown-toggle"  id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-         {{'menu.works' | translate}}
+        <a class="nav-link dropdown-toggle" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          {{'menu.works' | translate}}
         </a>
         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
           <li><a class="dropdown-item" routerLink="/works">{{'menu.works' | translate}}</a></li>
