--- a/epic.crm.frontend/src/app/nav-menu/nav-menu.component.scss
+++ b/epic.crm.frontend/src/app/nav-menu/nav-menu.component.scss
@@ -7,3 +7,11 @@
   cursor: text !important;
 }
 
+.logo {
+  width: 90px;
+  height: 60px;
+}
+
+.navbar-collapse {
+  padding-top: 14px !important;
+}
